--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,1 +1,37 @@
+.hero-section {
+    background-image: url("C:/Users/Harish kumar T/OneDrive/Desktop/New folder/web/src/img/Grid.png");
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    padding: 100px 20px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+  }
+  
 
+  
+  .subtitle {
+    font-size: 1.8rem;
+    margin: 0px;
+  }
+  
+  .title {
+    font-size: 4rem;
+    font-weight: bold;
+    margin :10px
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #333;
+  }
+  
