--- a/src/components/GlowingText/GlowingText.scss
+++ b/src/components/GlowingText/GlowingText.scss
@@ -26,7 +26,7 @@
         width: 100%;
         height: 100%;
         pointer-events: none;
-        background: radial-gradient(circle at var(--x) var(--y), transparent 10%, rgba(black, .95) 20%);
+        background: radial-gradient(circle at var(--x) var(--y), transparent 10%, black 20%);
         mix-blend-mode: hue;
     }
 }
