--- a/src/Pages/Sec.css
+++ b/src/Pages/Sec.css
@@ -16,12 +16,12 @@ body {
   margin: 0;
 }
 
-.header {
+.container .header {
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
+  width: 70%;
   padding: 10px;
   max-width: 1200px;
   margin: 50px auto;
@@ -101,8 +101,8 @@ body {
   gap: 15px;
 }
 
-.portfolio-btn {
-  width: 100%;
+.header-icons .portfolio-btn {
+  width: 120%;
   height: 60px;
   padding: 10px;
   border-radius: 50px;
@@ -126,7 +126,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 150%;
+  width: 100%;
   height: 150%;
   background: radial-gradient(circle at 50% 50%, rgba(0, 183, 255, 0.304), transparent 70%);
   filter: blur(200px);
@@ -179,14 +179,14 @@ body {
   }
 
   .bottom {
-    width: 80%;
+    width: 70%;
     height: 10%;
     flex-direction: row;
     align-items: center;
   }
 
   .bottom-label {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     width: 100%;
   }
 
@@ -445,12 +445,14 @@ body {
   width: 100%;
 }
 
-@media (max-width: 650px) {
-  .header-icons {
+@media (max-width: 800px) {
+ .header .header-icons {
     display: none;
   }
-
-  .menu-button {
+.container .header{
+  width: 95%;
+}
+  .container .menu-button {
     display: block;
   }
 }
