--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,9 +1,10 @@
   .gradient-button {
     position: relative;
     padding: 20px 30px;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    font-weight: 300;
     color: white;
-    background: #09041D;
+    background: rgba(6, 33, 43, .5);
     border-radius: 17px;
     background-clip: padding-box;
     transition: all 0.4s ease;
@@ -15,9 +16,9 @@
     content: "";
     position: absolute;
     inset: 0;
-    border-radius: 13px;
-    padding: 3px;
-    background: linear-gradient(90deg, #00B7FF, #FFFFFF);
+    border-radius: 17px;
+    padding: 2.4px;
+    background: linear-gradient(45deg, #00B7FF, #FFFFFF);
     -webkit-mask: 
       linear-gradient(#09041D 0 0) content-box,
       linear-gradient(#09041D 0 0);
@@ -26,14 +27,17 @@
       linear-gradient(#09041D 0 0);
     mask-composite: exclude;
   }
-  
   .gradient-button:hover::before {
     background: linear-gradient(90deg, #FFFFFF, #00B7FF);
   }
   
   .gradient-button:hover,
   .gradient-button:focus {
-    box-shadow:-20px -8px 30px -20px #00B7FF,-20px -8px 30px -20px #00B7FF, -15px -20px 20px -30px #FFFFFF, -15px -20px 20px -30px #FFFFFF, -15px -20px 20px -30px #FFFFFF;  
+    box-shadow: -10px -2px 30px -20px #00B7FF,
+                -10px -8px 30px -20px #00B7FF, 
+                -7px -20px 20px -30px #FFFFFF,
+                -7px -20px 20px -30px #FFFFFF, 
+                -7px -20px 20px -30px #FFFFFF;  
   
     transform: translateY(-0.2em);
   }
