--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,41 +1,70 @@
 /* General Header Styles */
 .header {
-    position: relative;
+    position: absolute;
+    top: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 70%;
-    padding: 10px;
-    max-width: 1200px;
-    margin: 50px auto;
-    margin-bottom: 50px;
-    border-radius: 65px;
+    width: 40%;
+    min-width: min-content;
+    padding: .8rem .75rem .75rem 2rem;
+    border-radius: 5px;
     z-index: 1;
-  }
+}
+
+  
+.header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 65px;
+  padding: 1.5px;
+  background: linear-gradient(90deg, #ffffffef, #ffffff25);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  z-index: -1;
+}
   
   .header .logo {
-    height: 50px;
     object-fit: contain;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 5px;
-    margin-left: 2%;
-    border-radius: 10px;
+    height: 25px;
   }
-  
-  .header .header-icons {
+
+  .header-icons {
+      display: flex;
+      color: #505050;
+      font-weight: 500;
+      gap: .5rem;
+  }
+
+  .header-icons img {
+    height: 25px;
+    width: 25px;
+    object-fit: contain;
+  }
+
+  .header-icons .rectangle {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 15px;
+    padding: .5rem 1rem;
+    gap: .5rem;
+    background-color: rgba(255, 255, 255, .9);
+    border-radius: 1.4rem;
   }
-  
-  .header-icons .portfolio-btn {
-    width: 120%;
-    height: 60px;
-    padding: 10px;
-    border-radius: 50px;
-    object-fit: cover;
-    display: block;
-    cursor: pointer;
+
+  .header-icons .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, .9);
   }
   
   .icon {
@@ -117,7 +146,7 @@
       display: none;
     }
  .header {
-      width: 95%;
+      width: 70%;
     }
 .menu-button {
       display: block;
