--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -10,13 +10,14 @@
     transition: all 0.4s ease;
     cursor: pointer;
     overflow: hidden;
+    outline: none;
   }
   
   .gradient-button::before {
     content: "";
     position: absolute;
     inset: 0;
-    border-radius: 17px;
+    border-radius: 14px;
     padding: 2.4px;
     background: linear-gradient(45deg, #00B7FF, #FFFFFF);
     -webkit-mask: 
