--- a/src/components/CollaborationLogo/CollaborationLogo.scss
+++ b/src/components/CollaborationLogo/CollaborationLogo.scss
@@ -1,10 +1,9 @@
-
-
 .collaborationLogo {
+    position: relative;
     max-width: max-content;
-    width: 100px;
-    min-height: 100px;
-    padding: 1rem 1rem;
+    width: 120px;
+    min-height: 120px;
+    padding: 1rem 1.5rem;
     border: 1px solid transparent;
     border-radius: 1rem;
     transition: all .3s ease;
@@ -14,30 +13,48 @@
     align-items: center;
     gap: .25rem;
 
+
     img {
+        position: relative;
         height: 80%;
         width: 80%;
         object-fit: contain;
         filter: saturate(0) brightness(.75);
         transition: filter .3s ease;
+        opacity: .4;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(65, 132, 248, .9);
+            z-index: 33;
+            mix-blend-mode: darken;
+        }
     }
 
     div.name {
         text-align: center;
         border: 1px solid transparent;
         text-shadow: none;
-        transition: text-shadow .3s ease;
+        transition: all .3s ease;
+        opacity: .5;
     }
 
     &:hover {
-        background: linear-gradient( 120deg, rgba(white, .02), rgba(white, .04));
+        background: linear-gradient(120deg, rgba(white, .02), rgba(white, .04));
         border-color: rgba(0, 183, 255, .3);
 
         img {
+            opacity: 1;
             filter: none;
         }
 
         div.name {
+            opacity: 1;
             color: white;
             text-shadow: 0 0 10px rgb(255, 247, 0, .3), 0 0 10px rgb(255, 247, 0, .3), 0 0 30px rgba(255, 0, 0, .3);
         }
