--- a/src/Pages/Sec/Sec.scss
+++ b/src/Pages/Sec/Sec.scss
@@ -100,8 +100,8 @@
     height: 35px;
     width: 35px;
     object-fit: cover;
-    border: 1.5px solid white;
-    background-color: rgb(200, 200, 200);
+    border: 1.5px solid rgba(255, 255, 255, 0);
+    background-color: rgba(253, 252, 252, 0);
     border-radius: 50%;
   }
 
