--- a/src/Pages/Sec/Sec.scss
+++ b/src/Pages/Sec/Sec.scss
@@ -544,16 +544,17 @@
 
   .bottom {
     flex-direction: row;
-    width: 70%;
+    width: 90%;
+    gap: 0 !important;
   }
 
   .bottom-label {
-    font-size: 70%;
+    font-size: .65rem;
   }
 
   .client-img {
-    width: 20px;
-    height: 20px;
+    width: 20px !important;
+    height: 20px !important;
   }
 }
 
