--- a/src/components/Video.scss
+++ b/src/components/Video.scss
@@ -1,25 +1,71 @@
 .testimonial-card {
     width: 350px;
     border-radius: 16px;
-    overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     background: #443d3d54;
+    // background: linear-gradient(70deg, #09090920, #2628299b); // Define the gradient
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 16px;
+      box-sizing: border-box;
+      padding: .05rem;
+      z-index: 1;
+      background: linear-gradient(to bottom, rgba(166, 166, 166, .4), transparent);
+      -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+      mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+      -webkit-mask-composite: destination-out;
+      mask-composite: exclude;
+    }
   
     .video-section {
       position: relative;
       width: 100%;
       height: 200px;
-  
-      .video-image {
-        width: 100%;
+      
+      div.video-image-container {
+
+        position: relative;
+        border-radius: 1rem;
+        margin: 10px;
+        overflow: hidden;
         height: 100%;
-        padding: 10px;
-        border-radius: 25px;
+        
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border-radius: 1rem;
+          box-sizing: border-box;
+          background: linear-gradient(to bottom, transparent, transparent, black); /* Example background */
+          z-index: 2;
+        }
+
+        img.video-image {
+          width: 100%;
+          height: 100%;
+          border-radius: 1rem;
+          position: relative;
+          object-fit: cover;
+  
+        }
       }
+
+      
       .details{
         position: absolute;
-        top: 80%;
+        bottom: 1rem;
         left: 6%;
+        z-index: 3;
+
         .name {
             font-size: .7rem;
             margin: 0;
@@ -56,6 +102,7 @@
         cursor: pointer;
         opacity:0.8;
         transition: background 0.3s ease-in-out;
+        z-index: 3;
   
         &:hover {
           opacity:1;
