--- a/src/components/GlowingText/GlowingText.scss
+++ b/src/components/GlowingText/GlowingText.scss
@@ -6,21 +6,21 @@
     justify-content: center;
     align-items: flex-start;
     background-color: transparent;
+    max-width: max-content;
 
     .glowingText {
         font-size: 5rem;
         line-height: 5.5rem;
         max-height: max-content;
         font-weight: 900;
-        color: rgb(79, 214, 255);
-        opacity: .7;
+        color: rgb(34, 203, 255);
+        opacity: .75;
         user-select: none;
     }
 
     .light {
         z-index: 8;
         position: absolute;
-        border: 1px solid red;
         top: 0;
         left: 0;
         width: 100%;
