--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -101,6 +101,7 @@
 }
 @media (max-width:713px)  {
   .footer{
+    padding: 0 1rem;
     scale: .8;
     justify-content: center;
 
@@ -108,6 +109,7 @@
 }
 @media (max-width:400px)  {
   .footer{
+    padding: 0 1rem;
     scale: .6;
     justify-content: center;
   }
