--- a/src/Pages/CtaSection/CtaSection.scss
+++ b/src/Pages/CtaSection/CtaSection.scss
@@ -19,26 +19,8 @@
         mask-position: 50% 50%;
         mask-size: 60%;
         mask-repeat: no-repeat;
-        // transform: translateY(20deg);
-
         transform: rotateX(var(--rotateX));
     }
-
-    // &::before {
-    //     content: '';
-    //     position: absolute;
-    //     top: 50%;
-    //     left: 50%;
-    //     transform: translate(-50%, -50%);
-    //     width: 100%;
-    //     height: 100%;
-    //     // background-image: url("../../assets/collaborations/background.png");
-    //     background-repeat: no-repeat;
-    //     background-size: cover;
-    //     background-position: center;
-    //     mask-image: linear-gradient(to bottom, transparent 0%, black 25%, black 75%, transparent 100%);
-    //     -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 30%, black 75%, transparent 100%);
-    // }
 
     .title {
         margin: 0 auto;
@@ -60,6 +42,17 @@
         max-width: max-content;
         margin: 0 auto;
         margin-top: 3rem;
+    }
+}
+
+@media screen and (max-width: 920px) {
+
+    .subtitle {
+        font-size: 1rem !important;
+    }
+
+    .title {
+        font-size: 3rem !important;
     }
 
 }
