--- a/src/Pages/Video/VideoSection.scss
+++ b/src/Pages/Video/VideoSection.scss
@@ -27,15 +27,18 @@
     text-align: center;
     font-size: 2rem;
     font-weight: 500;
+    line-height: 3.5rem;
   }
   
   .subtitle {
-      opacity: .8;
+    opacity: .8;
     font-size: 1rem;
     margin: .5rem 0;
     line-height: 25px;
     font-weight: lighter;
     text-align: center;
+    width: min(1200px, 90%);
+    margin: 0 auto;
   }
 
   .featuredWorkContainer {
