--- a/src/Pages/FeaturedWorkSection/FeaturedWorkSection.scss
+++ b/src/Pages/FeaturedWorkSection/FeaturedWorkSection.scss
@@ -35,6 +35,8 @@
       line-height: 25px;
       font-weight: lighter;
       text-align: center;
+      width: min(800px, 90%);
+        margin: 0 auto;
     }
 
     .featuredWorkContainer {
