--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,16 +11,17 @@
   min-width: min-content;
   padding: .8rem .75rem .75rem 2rem;
   border-radius: 65px;
-  z-index: 99;
-  background: rgba(255, 255, 255, .05);
-  backdrop-filter: blur(5px);
+  z-index: 10;
+  background: rgba(0, 0, 0, .75);
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
   transition: all 0.3s ease-in-out;
 }
 
 
 .header::before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -92,12 +93,11 @@
 
 /* Mobile Dropdown Menu */
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 60vh;
-  background-color: rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -117,6 +117,7 @@
 }
 
 .mobile-menu-container {
+  background-color: rgb(0, 0, 0);
   width: 96%;
   margin: 0 auto;
   padding: 2rem;
