--- a/src/Pages/BlogPage/BlogPage.scss
+++ b/src/Pages/BlogPage/BlogPage.scss
@@ -1,6 +1,10 @@
 
 
 .BlogPage {
+    border: 2px solid transparent;
+    background-image: url("../../assets/blogs/background.png");
+    background-position: top center;
+    background-repeat: no-repeat;
 
     .header {
         position: absolute;
@@ -14,6 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 2rem;
 
             .left {
                 padding: .5rem;
@@ -51,7 +56,7 @@
         }
 
         .content {
-
+            margin-top: 10rem;
 
             .blogGridContainer {
                 .blogGrid {
