--- a/src/Pages/CollaborationSection/CollaborationSection.scss
+++ b/src/Pages/CollaborationSection/CollaborationSection.scss
@@ -1,6 +1,3 @@
-
-
-
 .CollaborationSection {
     padding: 5rem 0;
     position: relative;
@@ -23,23 +20,24 @@
 
     .hideInMobile {
         display: flex;
+        justify-content: center;
     }
 
     .title {
-      margin: 0 auto;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 500;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 3rem;
+        font-weight: 500;
     }
-    
+
     .subtitle {
         opacity: .8;
-      font-size: 1rem;
-      margin: .5rem 0;
-      line-height: 25px;
-      font-weight: lighter;
-      text-align: center;
-      width: min(800px, 90%);
+        font-size: 1rem;
+        margin: .5rem 0;
+        line-height: 25px;
+        font-weight: lighter;
+        text-align: center;
+        width: min(800px, 90%);
         margin: 0 auto;
     }
 
@@ -59,16 +57,108 @@
     }
 }
 
-@media screen and (max-width: 768px) {
-
+@media screen and (max-width: 950px) {
     .CollaborationSection .logosContainer {
         width: 60%;
     }
 
     .CollaborationSection {
         .title {
-            line-height: 3rem;
+            font-size: 280%;
             font-weight: 600;
+        }
+
+        .subtitle {
+            line-height: 1.4rem;
+            font-size: 100%;
+        }
+    }
+
+    .hideInMobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 868px) {
+    .CollaborationSection .logosContainer {
+        width: 60%;
+    }
+
+    .CollaborationSection {
+        .title {
+            font-size: 230%;
+        }
+
+      
+    }
+
+    .hideInMobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .CollaborationSection .logosContainer {
+        width: 60%;
+    }
+
+    .CollaborationSection {
+        .center {
+            font-size: 90%;
+        }
+
+     
+    }
+
+    .hideInMobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .CollaborationSection {
+        .center {
+            font-size: 85%;
+        }
+
+        .subtitle {
+            font-size: 85%;
+        }
+    }
+
+    .hideInMobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .CollaborationSection {
+        .gradientText{
+            font-size: 10px;
+        }
+        .center {
+            font-size: 60%;
+        }
+        .subtitle {
+            font-size: 100%;
+        }
+    }
+
+    .hideInMobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .CollaborationSection {
+        .gradientText{
+            font-size: 10px;
+        }
+        .center {
+            font-size: 50%;
+        }
+        .subtitle {
+            font-size: 100%;
         }
     }
 
