--- a/src/Pages/FeaturedWorkSection/FeaturedWorkSection.scss
+++ b/src/Pages/FeaturedWorkSection/FeaturedWorkSection.scss
@@ -24,7 +24,7 @@
     .title {
       margin: 0 auto;
       text-align: center;
-      font-size: 2rem;
+      font-size: 3rem;
       font-weight: 500;
     }
     
@@ -53,4 +53,28 @@
         max-width: max-content;
         margin: 0 auto;
     }
+}
+@media screen and (max-width: 920px) {
+    .FeaturedWorkSection{
+     .subtitle {
+         font-size: 1rem !important;
+     }
+ 
+     .title {
+         font-size: 2.5rem !important;
+     }
+    }
+ 
+ }
+ @media screen and (max-width: 450px) {
+    .FeaturedWorkSection{
+     .subtitle {
+         font-size: .7rem !important;
+     }
+ 
+     .title {
+         font-size: 2rem !important;
+     }
+    }
+ 
 }
