--- a/src/Pages/CtaSection/CtaSection.scss
+++ b/src/Pages/CtaSection/CtaSection.scss
@@ -26,6 +26,7 @@
         margin: 0 auto;
         text-align: center;
         font-size: 4rem;
+        letter-spacing: -5px;
         font-weight: 600;
     }
 
@@ -52,6 +53,8 @@
     }
 
     .title {
+        letter-spacing: -3px;
+
         font-size: 3rem !important;
     }
    }
@@ -59,11 +62,15 @@
 }
 @media screen and (max-width: 700px) {
     .CtaSection{
+        padding: 5rem 0;
+        padding-bottom: 10rem;
      .subtitle {
          font-size: .8rem !important;
      }
  
      .title {
+        letter-spacing: -2px;
+
          font-size: 2.5rem !important;
      }
     }
