--- a/src/Pages/PlanDesignDevelopSection/PlanDesignDevelopSection.scss
+++ b/src/Pages/PlanDesignDevelopSection/PlanDesignDevelopSection.scss
@@ -4,7 +4,6 @@
     position: relative;
     display: flex;
     width: 100%;
-    background-color: rgba(31, 29, 29, 0.251);
     box-sizing: border-box;
     margin: 0 auto;
     // border: 4px solid hotpink;
@@ -14,7 +13,6 @@
     * {
         box-sizing: border-box;
     }
-
 
     &::before {
         content: '';
@@ -33,15 +31,32 @@
     }
   
 
-    .glowingTextContainer {
-        // border: 2px solid blue;
-        padding: 2rem;
-        flex: 1;
-        min-width: 0;
-        
-        background-color: rgba(8, 7, 7, 0.656);
-    }
+    .doubleGlowText {
 
+        position: relative;
+
+        .glw.glw1 {
+            color: rgba(255, 255, 255, .25);
+        }
+
+        .glw.glw2 {
+            position: absolute;
+            top: 0;
+            color: rgb(3, 193, 251);
+
+            mask-image: radial-gradient(circle at var(--x) var(--y), black 2%, transparent 10%);
+        }
+        
+        .glowingTextContainer {
+            // border: 2px solid blue;
+            padding: 2rem;
+            flex: 1;
+            min-width: 0;
+            
+        }
+    
+    }
+    
     .detailedInfo {
         min-width: 0;
         // border: 2px solid red;
@@ -221,6 +236,21 @@
                }
             }
             }
+    }
+
+    .PlanDesignDevelopSection {
+        .doubleGlowText {
+
+            .glw1 {
+                .glowingText:hover {
+                    color: rgb(3, 193, 251);
+                }
+            }
+
+            .glw2 {
+                display: none;
+            }
+        }
     }
 
 
