--- a/src/components/FeaturedWorkCard/FeaturedWorkCard.scss
+++ b/src/components/FeaturedWorkCard/FeaturedWorkCard.scss
@@ -76,11 +76,36 @@
                 padding-bottom: 50px;
                 text-align: left;
                 transition: bottom 0.4s ease-in-out;
-                .icony{
-                    width: 30px;
-                    margin-top: 20px;
-                    border-radius: 1rem;
-                }
+
+                .icons {
+                    display: flex;
+                    z-index: 2;
+
+                    .icon {
+                        max-width: max-content;
+                        flex-grow: 1;
+                        margin-right: .25rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: .2rem;
+                        border-radius: 1rem;
+                        overflow: hidden;
+
+                        img {
+                            width: 15px;
+                            height: 15px;
+                            object-fit: contain;
+                            border-radius: 1rem;
+                        }
+
+                        .name {
+                            font-size: .25rem;
+                            font-weight: 500;
+                            margin-left: 10px;
+                        }
+                    }
+                }                
             }
         }
 
