--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -63,6 +63,9 @@
   gap: .5rem;
   background-color: rgba(255, 255, 255, .9);
   border-radius: 1.4rem;
+
+  text-decoration: none;
+  color: #505050;
 }
 
 .header-icons .circle {
@@ -72,6 +75,9 @@
   padding: .5rem;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, .9);
+
+  text-decoration: none;
+  color: #505050;
 }
 
 .icon {
