--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ html, body, #root {
   width: 100%;
   /* max-width: 100vw; */
   /* overflow-x: clip; */
+
+  scroll-behavior: smooth;
 }
 *, *::before, *::after {
   box-sizing: inherit;
