plan design develop hover white instead of blue

--- a/src/Pages/PlanDesignDevelopSection/PlanDesignDevelopSection.scss
+++ b/src/Pages/PlanDesignDevelopSection/PlanDesignDevelopSection.scss
@@ -243,7 +243,7 @@
 
             .glw1 {
                 .glowingText:hover {
-                    color: rgb(3, 193, 251);
+                    color: white;
                 }
             }
 
