--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -97,9 +97,19 @@
   z-index: 10;
 }
 
+.Home:has(.mobile-menu.open) .header {
+  border-radius: 30px 30px 0 0;
+}
+
+.Home:has(.mobile-menu.open) .header::before {
+  border-radius: 30px 30px 0 0;
+  padding-bottom: 0;
+  background: #e6dadaef;
+}
+
 /* Mobile Dropdown Menu */
 .mobile-menu {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -124,11 +134,11 @@
 
 .mobile-menu-container {
   background-color: rgb(0, 0, 0);
-  width: 96%;
+  width: 98%;
   margin: 0 auto;
   padding: 2rem;
   border: 1px solid white;
-  border-color: transparent white white white;
+  border-color: transparent #e6dadaef #e6dadaef #e6dadaef;
   border-radius: 1rem;
 }
 
