--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -48,6 +48,7 @@
   font-size: 30px;
   color: #ccc;
   transition: color 0.3s;
+  cursor: pointer;
 }
 
 .social-icon:hover {
@@ -91,6 +92,19 @@
 }
 
 .footer-list li:hover {
+  color: #fff;
+  cursor: pointer;
+}
+
+.footer-list li .link {
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #ccc;
+  line-height: 25px;
+  width: 100%;
+}
+
+.footer-list li .link:hover {
   color: #fff;
   cursor: pointer;
 }
@@ -232,3 +246,8 @@
 }
 /* 
 /* Extra small phones (350px and below) */
+
+.link {
+  color: #ffff;
+  text-decoration: none;
+}
