integrated blogs api

--- a/src/Pages/BlogPage/BlogPage.scss
+++ b/src/Pages/BlogPage/BlogPage.scss
@@ -1,4 +1,12 @@
+.search {
+    color: #fff;
+}
 
+.no-text {
+    color: #ffff;
+    text-align: center;
+    padding-bottom: 50px;
+}
 
 .BlogPage {
     border: 2px solid transparent;
